# meeting_room_leader

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
app/: Install_and_Setup.md
components/language_manager/: CMakeLists.txt  language_manager.c  language_manager.h
components/network_request_guard/: CMakeLists.txt  network_request_guard.c
components/network_request_guard/include/: network_request_guard.h
components/ui/: CMakeLists.txt  device_name_store.c  ui.c  ui_Screen1.c  ui_Screen8.c  ui_ScreenInfo.c  ui_WeatherScreen.c  ui_helpers.c  ui_time.c  ui_weather_bridge.c
components/ui/fonts/: ui_font_FontZh12.c  ui_font_FontZh14.c  ui_font_FontZh16.c  ui_font_FontZh18.c  ui_font_FontZh20.c  ui_font_FontZh26.c  ui_font_FontZh30.c  ui_font_FontZhh50.c  ui_font_Fonttt16.c  ui_font_Roboto40.c  ui_font_Roboto50.c  ui_font_Roboto55.c  ui_font_Roboto60.c
components/ui/images/: ui_img_1474184779.c  ui_img_630012529.c  ui_img_653468872.c  ui_img_infoicon_png.c  ui_img_moonicon_png.c  ui_img_nameicon_png.c  ui_img_settingsbuttonan_png.c  ui_img_smartphone_png.c  ui_img_wifi32_png.c  ui_img_wifiicon13_png.c
components/ui/include/: device_name_store.h  ui.h  ui_Screen1.h  ui_Screen8.h  ui_ScreenInfo.h  ui_events.h  ui_helpers.h
components/weather_module/: CMakeLists.txt  weather_adapter.cpp  weather_adapter.h  weather_icons.h  weather_integration.cpp  weather_integration.h  weather_module.cpp  weather_module.h  weather_service.cpp  weather_service.h  weather_ui.cpp  weather_ui.h  weather_ui_api.h  weather_widget.cpp  weather_widget.h
components/weather_module/images/: 01d.c  01n.c  02d.c  02n.c  03d.c  03n.c  04d.c  04n.c  09d.c  09n.c  10d.c  10n.c  11d.c  11n.c  13d.c  13n.c  50d.c  50n.c  pressure.c  sunrise.c  sunset.c  wind.c
main/: CMakeLists.txt  Kconfig.projbuild  aux_udp_link.cpp  config_portal.c  i2c_master.c  idf_component.yml  info_links_store.c  location_service.cpp  location_service.h  lvgl_v8_port.cpp  lvgl_v8_port.h  main.cpp  rtc_ds3231.c  sleep_manager.cpp  time_sync.c  uart_json.c  uart_json.h  uart_manager.c  uart_manager.h  wifi_manager.c
main/include/: aux_udp_link.h  aux_udp_protocol.h  config_portal.h  i2c_master.h  info_links_store.h  rtc_ds3231.h  sleep_manager.h  time_sync.h  wifi_manager.h
